:fire: Add repository

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,23 @@
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- HTML Meta Tags -->
+  <meta name="description" content="Programador FUllstack especializado en Angular, JavaScript y maquetado de interfaces web atractivas y funcionales. Apasionado por el diseño responsivo y la optimización de la experiencia del usuario, implementación de soluciones innovadoras. Comprometido con las mejores prácticas de desarrollo y la colaboración en equipo para entregar proyectos de alta calidad.">
 
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Pedro Holguin - Programador Fullstack">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="albertosubero.dev">
+  <meta property="twitter:url" content="https://albertosubero.dev/">
+  <meta name="twitter:title" content="Alberto Subero - Desarrollador Frontend Angular">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content=""">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 </head>
