--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="">
-  <meta property="twitter:url" content="">
-  <meta name="twitter:title" content="">
+  <meta property="twitter:domain" content="albertosubero.dev">
+  <meta property="twitter:url" content="https://albertosubero.dev/">
+  <meta name="twitter:title" content="Alberto Subero - Desarrollador Frontend Angular">
   <meta name="twitter:description" content="">
   <meta name="twitter:image" content=""">
 
