--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <meta property="twitter:url" content="https://albertosubero.dev/">
   <meta name="twitter:title" content="Alberto Subero - Desarrollador Frontend Angular">
   <meta name="twitter:description" content="">
-  <meta name="twitter:image" content=""">
+  <meta name="twitter:image" content="">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 </head>
